fixed some bugs

--- a/src/index.html
+++ b/src/index.html
@@ -14,18 +14,19 @@
   </head>
 
   <body>
-    <div class="background"></div>
-    <h1 class="page-title">Country information</h1>
-    <form class="search-form">
-      <input
-        type="text"
-        class="form-control"
-        id="searchQuery"
-        placeholder="Enter country"
-        aria-label="Username"
-        aria-describedby="basic-addon1"
-      />
-    </form>
-    <div class="results-js"></div>
+    <section class="page-section">
+      <h1 class="page-title">Country information</h1>
+      <form class="search-form">
+        <input
+          type="text"
+          class="form-control"
+          id="searchQuery"
+          placeholder="Enter country"
+          aria-label="Username"
+          aria-describedby="basic-addon1"
+        />
+      </form>
+      <div class="results-js"></div>
+    </section>
   </body>
 </html>
