--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
           placeholder="Enter country"
           aria-label="Username"
           aria-describedby="basic-addon1"
+          autocomplete="off"
         />
       </form>
       <div class="results-js"></div>
